--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -1,3 +1,9 @@
+//frontend/src/styles/_variables.scss
+// 引入Bootstrap源文件
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+
 // 颜色系统
 $theme-colors: (
   "primary": #ff4757,
@@ -14,7 +20,3 @@ $spacers: (
   // ...
 );
 
-// 引入Bootstrap源文件
-@import "~bootstrap/scss/functions";
-@import "~bootstrap/scss/variables";
-@import "~bootstrap/scss/mixins";
