add style for card img

--- a/frontend/src/components/Menu/Menu.module.scss
+++ b/frontend/src/components/Menu/Menu.module.scss
@@ -96,3 +96,11 @@
   max-width: 500px;
   width: 90%;
 }
+
+/* 新增：模态框图片样式 */
+.modalImage {
+  width: 100%;
+  height: auto;
+  border-radius: 4px;
+  margin-bottom: 1rem;
+}
